--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   const themes = [
     "the letter to home i could never send",
     "memory loss",
-    "my future",
+    "fear and love",
     "night time",
     "loneliness",
      "complexities",
