--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <b>words that are dear to me</b>
 <p>hey i created this little website while procrastinating uni work. </p>
 <p>theme switches daily, write as much or as little as you want and use the glyphs to make your text pretty
-    if you feel comfortable, save poem as jpg and send to @words on instagram. also if you have any themes you would like to add message that account
+    if you feel comfortable, save poem as jpg and send to @wordsthataredeartome on instagram. also if you have any themes you would like to add message that account
 </p>
 <div id="theme"></div>
 <p> click on glyphs to add</p>
