--- a/index.html
+++ b/index.html
@@ -74,6 +74,29 @@
     "the letter to home i could never send",
     "memory loss",
     "fear and love",
+    "encase me",
+    "that thursday we danced",
+    "lets swim",
+    "fifteen",
+    "driving",
+    "a beautifully dire situation",
+    "the controversy",
+    "togetherness",
+    "publicity and ruin",
+    "the journey to france",
+    "if i could speak to you once more",
+    "the seeker",
+    "i hide",
+    "i think i mightve been wrong",
+     "to love is to notice",
+     "my planet and universe",
+     "big mouse and the little cat",
+    "something thats playing on my mind and i want to explain in detail",
+    "the mole and the dove",
+    "the little love i gave",
+    "drinking",
+    "where is my god",
+    "secondary school",
     "night time",
     "loneliness",
      "complexities",
