--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     "the journey to france",
     "if i could speak to you once more",
     "the seeker",
+     "is it time to heal",
     "i hide",
     "i think i mightve been wrong",
      "to love is to notice",
